Left Navigation Menu, Header & Dashboard

--- a/src/common/MainWrap/_maincontainer.scss
+++ b/src/common/MainWrap/_maincontainer.scss
@@ -5,7 +5,14 @@
 	height: 100vh;
 
 	.container-body {
-		background-color: $platinum;
+		background-color: $flash-white;
+		display: flex;
+		flex: 1;
+		flex-direction: column;
+	}
+
+	.main-body {
+		padding: 20px;
 		display: flex;
 		flex: 1;
 		flex-direction: column;
