--- a/src/resources/styles/style.scss
+++ b/src/resources/styles/style.scss
@@ -1,5 +1,6 @@
 @import './mixines';
 @import './variables';
+@import './header';
 @import './leftnavbar';
 @import '../../views/Auth/login.scss';
 @import '../../common//MainWrap/maincontainer.scss';
