--- a/src/resources/styles/_leftnavbar.scss
+++ b/src/resources/styles/_leftnavbar.scss
@@ -1,5 +1,8 @@
 .left-nav-bar {
-	background-color: aqua;
+	background-color: $white-color;
 	display: flex;
-	flex: 0.3;
+	width: 250px;
+	flex-direction: column;
+	position: relative;
+	box-shadow: 2px 0px 5px 0px $primary-color;
 }
