Quick View for patients Lsiting done

--- a/src/common/MainWrap/_maincontainer.scss
+++ b/src/common/MainWrap/_maincontainer.scss
@@ -11,10 +11,17 @@
 		flex-direction: column;
 	}
 
-	.main-body {
-		padding: 20px;
+	.login-body {
 		display: flex;
 		flex: 1;
 		flex-direction: column;
+	}
+
+	.main-body {
+		display: flex;
+		flex: 1;
+		flex-direction: column;
+		margin-top: 130px;
+		margin-left: 250px;
 	}
 }
