--- a/src/resources/styles/_leftnavbar.scss
+++ b/src/resources/styles/_leftnavbar.scss
@@ -5,5 +5,6 @@
 	width: 250px;
 	flex-direction: column;
 	position: fixed;
-	box-shadow: 2px 0px 5px 0px $primary-color;
+	// box-shadow: 2px 0px 5px 0px $primary-color;
+	border-right: 1px solid $primary-color;
 }
