--- a/src/resources/styles/style.css
+++ b/src/resources/styles/style.css
@@ -1,3 +1,46 @@
+.top-search {
+  position: fixed;
+  z-index: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 72px;
+  right: 0;
+  left: 260px;
+  background: #f1f1f1;
+  padding: 20px 20px 30px 10px;
+}
+
+.top-search .search-field {
+  background-color: #ffffff;
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 2px 15px 1px rgba(0, 0, 0, 0.3);
+          box-shadow: 0px 2px 15px 1px rgba(0, 0, 0, 0.3);
+}
+
+.grid-container {
+  padding: 20px;
+  margin-top: 110px;
+  background-color: #f1f1f1;
+}
+
+.border-container, .tabs-container, .quick-view .patient-detail-card {
+  padding: 20px;
+  text-align: left;
+  background-color: #ffffff;
+  border: 1px solid #142560;
+}
+
+.tabs-container {
+  min-height: 600px;
+}
+
 .header {
   height: 128px;
   position: fixed;
@@ -51,8 +94,26 @@
       -ms-flex-direction: column;
           flex-direction: column;
   position: fixed;
-  -webkit-box-shadow: 2px 0px 5px 0px #142560;
-          box-shadow: 2px 0px 5px 0px #142560;
+  border-right: 1px solid #142560;
+}
+
+.loaderWrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 100%;
+  width: 100%;
+  background: rgba(255, 255, 255, 0.5);
+  z-index: 10000;
 }
 
 .login-container {
@@ -146,44 +207,6 @@
           flex-direction: column;
   margin-top: 130px;
   margin-left: 250px;
-}
-
-.quick-view .top-search {
-  position: fixed;
-  z-index: 1;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 72px;
-  right: 0;
-  left: 260px;
-  background: #f1f1f1;
-  padding: 20px 20px 30px 10px;
-}
-
-.quick-view .top-search .search-field {
-  background-color: #ffffff;
-  border-radius: 5px;
-  -webkit-box-shadow: 0px 2px 15px 1px rgba(0, 0, 0, 0.3);
-          box-shadow: 0px 2px 15px 1px rgba(0, 0, 0, 0.3);
-}
-
-.quick-view .grid-container {
-  padding: 20px;
-  margin-top: 110px;
-}
-
-.quick-view .patient-detail-card {
-  padding: 20px;
-  text-align: left;
-  background-color: #ffffff;
-  border: 1px solid #142560;
 }
 
 .quick-view .patient-detail-card .name-wrap {
