--- a/src/resources/styles/style.scss
+++ b/src/resources/styles/style.scss
@@ -1,7 +1,10 @@
 @import './mixines';
 @import './variables';
+@import './common.scss';
 @import './header';
 @import './leftnavbar';
+@import '../../common/Loader/loader.scss';
 @import '../../views/Auth/login.scss';
 @import '../../common/MainWrap/maincontainer.scss';
-@import '../../views//Patients/quickview.scss';
+@import '../../views/Patients/quickview.scss';
+@import '../../views/Patients/patients.scss';
